[package]
name = "arlen-run"
version = "0.1.0"
edition = "2021"
description = "Confined app launcher for Arlen: applies Landlock + seccomp + the egress filter + a per-command cgroup, then spawns the app under bwrap and reaps the tree."

[[bin]]
name = "arlen-run"
path = "src/main.rs"

[dependencies]
arlen-confiner = { path = "../../sdk/confiner" }
arlen-permissions = { path = "../../sdk/permissions" }
dirs = "5"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
landlock = "0.4"
# The third confinement layer: a deny-by-default seccomp allowlist compiled to
# cBPF and handed to bwrap via --seccomp (the ai-sandbox idiom). 0.5 matches the
# ai-sandbox pin so the workspace shares one build.
seccompiler = "0.5"

[dev-dependencies]
tempfile = "3"

[workspace]
