[package]
license = "AGPL-3.0-only"
name = "arlen-run"
version = "0.1.0"
edition = "2021"
description = "Confined app launcher for Arlen: applies Landlock + seccomp + the egress filter + a per-command cgroup, then spawns the app under bwrap and reaps the tree."

[[bin]]
name = "arlen-run"
path = "src/main.rs"

[dependencies]
arlen-confiner = { path = "../../sdk/confiner" }
arlen-permissions = { path = "../../sdk/permissions" }
# Strand 2's forwarding egress proxy: the launcher binds it on host loopback and
# runs the confined app in a route-absent netns whose only reachable peer is it.
arlen-net-guard = { path = "../../sdk/net-guard" }
# A small runtime to drive the async EgressProxy concurrently with the blocking
# app wait; tokio-util's CancellationToken tears the proxy down on guard drop.
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util", "time", "sync"] }
tokio-util = "0.7"
# The compiled seccomp filter is written to a temp file the pasta wrapper opens
# inside the netns (a memfd would be dropped by pasta) on the filtered launch.
tempfile = "3"
dirs = "5"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
landlock = "0.4"
# The third confinement layer: a deny-by-default seccomp allowlist compiled to
# cBPF and handed to bwrap via --seccomp (the ai-sandbox idiom). 0.5 matches the
# ai-sandbox pin so the workspace shares one build.
seccompiler = "0.5"

[workspace]
