[package]
name = "lunaris-auditd"
version = "0.1.0"
edition = "2021"
description = "Audit Daemon: the sole writer of the Lunaris append-only, hash-chained audit log"
license = "MIT"

[[bin]]
name = "lunaris-auditd"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "net", "io-util", "time", "sync"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
hmac = "0.12"
sha2 = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[workspace]
