[package]
name = "arlen-bridge-ingest"
version = "0.1.0"
edition = "2021"
description = "Arlen foreign-app bridge ingestion daemon: native-messaging host + declarative bridge.toml mapping into the KG"
authors = ["Arlen"]

[lib]
name = "arlen_bridge_ingest"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"

[dev-dependencies]
