[package]
license = "AGPL-3.0-only"
name = "arlen-bridge-ingest"
version = "0.1.0"
edition = "2021"
description = "Arlen foreign-app bridge ingestion daemon: native-messaging host + declarative bridge.toml mapping into the KG"
authors = ["Arlen"]

[lib]
name = "arlen_bridge_ingest"

[[bin]]
name = "arlen-bridge-ingest"
path = "src/main.rs"

[dependencies]
notify = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "1"
# The daemon binary persists upserts through the knowledge write socket and
# blocks on the async client from the synchronous stdio host.
os-sdk = { path = "../../sdk/os-sdk" }
tokio = { version = "1", features = ["rt", "net", "io-util", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
