[package]
name = "capsuled"
version = "0.1.0"
edition = "2021"
description = "Context Capsule daemon: mint, serve and revoke signed, scope-bound, frozen Knowledge-Graph slices lent under capability control"

[dependencies]
arlen-capsule = { path = "../../contracts/capsule" }
arlen-forage-store = { path = "../../forage/store" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["std", "zeroize"] }
