[package]
name = "capsuled"
version = "0.1.0"
edition = "2021"
description = "Context Capsule daemon: mint, serve and revoke signed, scope-bound, frozen Knowledge-Graph slices lent under capability control"

[dependencies]
arlen-capsule = { path = "../../contracts/capsule" }
arlen-forage-store = { path = "../../forage/store" }
arlen-forage-signing = { path = "../../forage/signing" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ed25519-dalek = { version = "2", features = ["std", "zeroize"] }
fs2 = "0.4"
audit-proto = { path = "../../contracts/audit-proto" }
tokio = { version = "1", features = ["rt", "net", "io-util", "macros", "sync"] }

[dev-dependencies]
audit-proto = { path = "../../contracts/audit-proto", features = ["test-util"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "net"] }
